# MTG-Model

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_all_steps.ps1  run_all_steps.py  run_tasks.py
data/: eval_outputs.jsonl  prompts.jsonl  teacher.jsonl
data/checkpoints/qwen2.5-32b-lora/: adapter_config.json
data/checkpoints/qwen2.5-32b-lora/checkpoint-254/: README.md  adapter_model.safetensors  optimizer.pt  rng_state.pth  scheduler.pt  trainer_state.json
data/report/: train-report-20260216211027.json  train-report-20260216211027.md  train-report-20260216211218.json  train-report-20260216211218.md  train-report-20260216211716.json  train-report-20260216211716.md
resources/: external_info
src/mtg_data_model/: build_prompts.py  config.py  eval.py  eval_report.py  package.py  prompts.py  sft_train.py  teacher_generate.py  train_report.py
