[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "mtg-data-model"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "transformers",
    "datasets",
    "peft",
    "trl",
    "accelerate",
]

[tool.setuptools.packages.find]
where = ["src"]
